[package]
name = "async-graphql-relay-derive"
description = "Derive macros for async-graphql-relay crate. Don't use directly!"
version = "0.4.0"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2018"
license = "MIT"

homepage = "https://github.com/oscartbeaumont/async-graphql-relay"
documentation = "https://docs.rs/async-graphql-relay"
repository = "https://github.com/oscartbeaumont/async-graphql-relay"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.15"
quote = "1.0.26"

[dependencies.darling]
git = "https://github.com/jonasbb/darling"
branch = "prepare-syn-2"