[package]
name = "async-graphql-relay-derive"
description = "Derive macros for async-graphql-relay crate. Don't use directly!"
version = "0.5.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2018"
license = "MIT"

homepage = "https://github.com/oscartbeaumont/async-graphql-relay"
documentation = "https://docs.rs/async-graphql-relay"
repository = "https://github.com/oscartbeaumont/async-graphql-relay"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.9"
quote = "1.0.36"
syn = "2.0.66"

[dev-dependencies]
async-graphql = "7.0.6"
